# stpreview

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
scripts/: example_data.py
src/downsample/: __main__.py  downsample.py
src/stpreview/: __init__.py  __main__.py  downsample.py  image.py
tests/: conftest.py  example_data.py  test_data.py  test_downsample_by.py  test_downsample_to.py  test_example_data.py  test_roman_data.py
