[project]
name = "stpreview"
description = "build downsampled previews of space telescope products"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zach Burnett", email = "zburnett@stsci.edu" }]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "asdf",
    "astropy",
    "numpy",
    "pillow",
    "scikit-image",
    "typer",
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    "pytest",
    "roman_datamodels",
]

[project.urls]
'repository' = 'https://github.com/spacetelescope/stpreview.git'

[project.scripts]
'downsample' = 'stpreview.__main__:command'

[build-system]
requires = [
    'setuptools >=60',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
  )/
)
'''

[tool.ruff]
line-length = 88
exclude = [
    '.tox',
    '.eggs',
    'build',
]
ignore = []

[tool.pytest.ini_options]
markers = [
    "shareddata: run tests with shared data"
]
